fix display on mobile

--- a/public/Pages/Timeline/Timeline.css
+++ b/public/Pages/Timeline/Timeline.css
@@ -6,6 +6,7 @@
 
 	--timeZone-height: 3.5em;
 	--number-TimeZones: 2;
+	overflow: hidden;
 }
 
 /* markers */
