--- a/public/Shared/Common/CommonStyle.css
+++ b/public/Shared/Common/CommonStyle.css
@@ -8,6 +8,7 @@ html, body{
 }
 
 body{
+	overflow-x: hidden;
 	background-color: var(--BackgroundColourRGB);
 
 	margin: 0px;
